# rittou

./: .gitignore  Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: commands.rs  config.rs  discord_event_handler.rs  main.rs
bot/src/data/: mod.rs  user_message_cache.rs
bot_data/: Cargo.toml
bot_data/src/: config.rs  encryption.rs  lib.rs  message_id_cache.rs  scramblr.rs  user_message_cache.rs
commands/: Cargo.toml
commands/src/: fetch_error.rs  fun.rs  lib.rs  slash_cat.rs  slash_dog.rs  slash_scramblr.rs  utility.rs
