[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
thiserror = "1.0.32"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "collector"
]