[package]
name = "bot_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = "1"
thiserror = "1"
lazy_static = "1"
aes-gcm = "0.10"
url = "2"
rand = "0.8"
polodb_core = "4.4"
aes-gcm-siv = "0.11"
md5 = "0.7"

[dependencies.serenity]
#version = "0.11"
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "collector"
]