[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot_data = { path = "../bot_data" }
toml = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
serde_json = "1"
thiserror = "1"
reqwest = "0.11"

[dependencies.serenity]
#version = "0.11"
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "collector"
]